[package]
name = "rraylib"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.15"
thiserror = "2.0.9"
typed-builder = "0.20.0"

[build-dependencies]
anyhow = "1.0.95"
bindgen = "0.71.1"
cc = "1.2.6"
cmake = "0.1.52"
convert_case = "0.6.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
zip-extract = "0.2.1"

[features]
default = [ "opengl_33", "x11" ]
wayland = []
x11 = []
opengl_43 = []
opengl_33 = []
opengl_21 = []
opengl_11 = []
opengl_es_30 = []
opengl_es_20 = []
external_glfw = []
raygui = []
physac = []
sdl = []
