[package]
name = "rraylib"
version = "0.1.0"
edition = "2021"
build = "./build/main.rs"

[dependencies]

[build-dependencies]
anyhow = "1.0.98"
bindgen = "0.71.1"
cc = "1.2.19"
cmake = "0.1.54"
tempfile = "3.19.1"
zip-extract = "0.2.2"
reqwest = { version = "0.12.15", features = ["blocking"] }

[features]
default = [ "opengl_33" ]
wayland = []
x11 = []
opengl_43 = []
opengl_33 = []
opengl_21 = []
opengl_11 = []
opengl_es_30 = []
opengl_es_20 = []
external_glfw = []
raygui = []
physac = []
sdl = []
